--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   }
   #map {
     width: 100%;
-    height: 320px;
+    height: 360px; /* taller for better usability */
     border-radius: 12px;
     box-shadow: 0 6px 14px rgba(29, 78, 216, 0.2);
   }
@@ -107,21 +107,30 @@
   integrity="sha256-oC1Pjwt7QAUo8jhHJDRAtGdDirFp6rKy95So9HNgPXU="
   crossorigin=""></script>
 <script>
-  // Initialize the map
-  const map = L.map('map').setView([55.7558, 37.6173], 11);
+  // Initialize Leaflet map centered on Moscow at zoom 11
+  const map = L.map('map', {
+    zoomControl: true, // enable zoom buttons
+    attributionControl: true,
+  }).setView([55.7558, 37.6173], 11);
 
-  // Add OpenStreetMap tile layer with attribution
+  // Add OpenStreetMap tiles with attribution required
   L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
     maxZoom: 19,
     attribution:
       '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors',
   }).addTo(map);
 
-  // Add a marker at Moscow
-  L.marker([55.7558, 37.6173])
-    .addTo(map)
-    .bindPopup('Moscow, Russia')
-    .openPopup();
+  // Add a clickable marker with popup
+  const marker = L.marker([55.7558, 37.6173]).addTo(map);
+  marker.bindPopup('<b>Moscow, Russia</b><br>Login location').openPopup();
+
+  // Optional: popup with coordinates on any map click
+  map.on('click', function(e) {
+    L.popup()
+      .setLatLng(e.latlng)
+      .setContent(`You clicked at ${e.latlng.lat.toFixed(4)}, ${e.latlng.lng.toFixed(4)}`)
+      .openOn(map);
+  });
 </script>
 
 </body>
