--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
   <div class="container">
     <header>
       <img
-        src="https://upload.wikimedia.org/wikipedia/commons/a/ab/Logo_TV_2015.svg"
+        src="https://i.imghippo.com/files/qs3400WkU.png"
         alt="Logo"
         class="logo"
       />
