--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       justify-content: center;
       align-items: center;
       margin-bottom: 8px;
+      border-radius: 5px;
     }
     header img.logo {
       height: 50px;
