--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
       min-width: 120px;
     }
     button.yes {
-      background-color: #16a34a;
+      background-color: #212fa8;
     }
     button.yes:hover {
-      background-color: #15803d;
+      background-color: #1d3ab6;
     }
     button.no {
       background-color: #dc2626;
