--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     header {
       width: 100%;
       height: 80px;
-      background-color: #1d4ed8; /* modern blue */
+      background-color: #464850; 
       display: flex;
       justify-content: center;
       align-items: center;
